syntax = "proto3";

package SFG.SystemSimulator.ProtoMessages;

enum AudioFormatType {
  PCM = 0;
}

message AudioFormatInformation {
  string audio_generator_id = 1;
  AudioFormatType type = 2;
  uint32 channels = 3;
  uint32 sample_rate = 4;
  uint32 bits_per_sample = 5;
}

message AudioFrame {
  string audio_generator_id = 1;
  bytes audio_data = 2;
}

message DoneStreamingAudio {
  string audio_generator_id = 1;
}
